making GUI prettier