@@ -2,60 +2,69 @@ import javax.swing.*;
 import java.awt.*;
 import java.util.List;
 
-public class StatsPanel extends JPanel {
+public class StatsPanel extends JPanel
+{
     private final JLabel[] avgLabels;
     private final JLabel[] minLabels;
     private final JLabel[] maxLabels;
 
-    public StatsPanel() {
-        setLayout(new BoxLayout(this, BoxLayout.Y_AXIS)); // Set layout for this panel
-
-        // Create a header label for the stats section
+    //sets up the panel layout and initializes labels
+    public StatsPanel()
+    {
+        setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));//set vertical layout for panel
+        //create a header label for the stats section
         JLabel headerLabel = new JLabel("Statistics", SwingConstants.CENTER);
-        headerLabel.setFont(new Font("Arial", Font.BOLD, 16));
+        headerLabel.setFont(new Font("Arial", Font.BOLD, 14));
         headerLabel.setBorder(BorderFactory.createEmptyBorder(10, 0, 10, 0));
 
-        // Create labels for averages and means
+        //create labels for averages and means
         String[] Texts = {
                 "Friction: ", "Vertical Displacement: ", "Confining Pressure: ",
                 "Displacement: ", "Normal Stress: ", "Shear Stress: ",
                 "Time: ", "Velocity: "
         };
+        //initialized labels for avg, min, and max stats
         avgLabels = createLabels(Texts);
         minLabels = createLabels(Texts);
         maxLabels = createLabels(Texts);
-
-        // Add components to the panel
+        //add components to the panel
         add(headerLabel); // Header at the top
         add(createSection("Average", avgLabels));
         add(createSection("Minimum", minLabels));
         add(createSection("Maximum", maxLabels));
     }
-
-    private JLabel[] createLabels(String[] texts) {
+    //helper method to create jLabel array with default values
+    private JLabel[] createLabels(String[] texts)
+    {
         JLabel[] labels = new JLabel[texts.length];
         for (int i = 0; i < texts.length; i++) {
-            labels[i] = new JLabel(texts[i] + "0.00"); // Initialize with default value
+            labels[i] = new JLabel("%s0.00".formatted(texts[i]));//initialize with default value
         }
         return labels;
     }
-
-    private JPanel createSection(String title, JLabel[] labels) {
+    //create JPanel for each stats category(avg, min, max)
+    private JPanel createSection(String title, JLabel[] labels)
+    {
         JPanel sectionPanel = new JPanel();
-        sectionPanel.setLayout(new FlowLayout(FlowLayout.LEFT)); // Use FlowLayout for horizontal arrangement
-        JLabel sectionLabel = new JLabel(title + ": ", SwingConstants.LEFT);
+        sectionPanel.setLayout(new FlowLayout(FlowLayout.LEFT));//use FlowLayout for horizontal
+        //create and add section title labels
+        JLabel sectionLabel = new JLabel("%s: ".formatted(title), SwingConstants.LEFT);
         sectionLabel.setFont(new Font("Arial", Font.PLAIN, 14));
         sectionPanel.add(sectionLabel);
+
+        //add each label to section panel
         for (JLabel label : labels) {
             sectionPanel.add(label);
         }
-        return sectionPanel;
+        return sectionPanel;//returns section panel
     }
 
-    // Method to update stats in the panel
-    public void updateStats(List<DataItem> dataItems) {
-        // Update averages
-        updateLabels(avgLabels, new double[]{
+    //method to update stats in the panel
+    public void updateStats(List<DataItem> dataItems)
+    {
+        //update averages
+        updateLabels(avgLabels, new double[]
+                {
                 DataLoader.calculateAverageFriction(dataItems),
                 DataLoader.calculateAverageVerticalDisp(dataItems),
                 DataLoader.calculateAverageConfiningPressure(dataItems),
@@ -65,9 +74,9 @@ public class StatsPanel extends JPanel {
                 DataLoader.calculateAverageTime(dataItems),
                 DataLoader.calculateAverageVelocity(dataItems)
         });
-
-        // Update means
-        updateLabels(minLabels, new double[]{
+        //update min
+        updateLabels(minLabels, new double[]
+                {
                 DataLoader.calcMinFriction(dataItems),
                 DataLoader.calcMinVerticalDisp(dataItems),
                 DataLoader.calcMinConfiningPressure(dataItems),
@@ -77,8 +86,9 @@ public class StatsPanel extends JPanel {
                 DataLoader.calcMinTime(dataItems),
                 DataLoader.calcMinVelocity(dataItems)
         });
-        // Update means
-        updateLabels(maxLabels, new double[]{
+        //update max
+        updateLabels(maxLabels, new double[]
+                {
                 DataLoader.calcMaxFriction(dataItems),
                 DataLoader.calcMaxVerticalDisp(dataItems),
                 DataLoader.calcMaxConfiningPressure(dataItems),
@@ -89,10 +99,13 @@ public class StatsPanel extends JPanel {
                 DataLoader.calcMaxVelocity(dataItems)
         });
     }
-
-    private void updateLabels(JLabel[] labels, double[] values) {
-        for (int i = 0; i < labels.length; i++) {
-            labels[i].setText(String.format("%s%.4f", labels[i].getText().split(":")[0] + ": ", values[i]));
+    //update label text for array of labels with values
+    private void updateLabels(JLabel[] labels, double[] values)
+    {
+        for (int i = 0; i < labels.length; i++)
+        {
+            //update label with formatted text and values
+            labels[i].setText(String.format("%s%.4f", "%s: ".formatted(labels[i].getText().split(":")[0]), values[i]));
         }
     }
 }
